objects/SFDC_PTO_Request__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Off__c</fullName>
        <formula>Request_End_Date__c  -  Request_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Paid Time Off Requests</relationshipLabel>
        <relationshipName>R00N30000001eUPPEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Time_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid Time Off?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_End_Date__c</fullName>
        <label>Request End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Start_Date__c</fullName>
        <label>Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PTO Request</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Request_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTOREQ-{00}</displayFormat>
        <label>PTO Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>